web-infras/parser/tests/fixtures/babel/typescript/cast/destructuring-assignent-rest-invalid/output.txt
[SyntaxError]: `...` must be followed by an assignable reference in assignment contexts (1,9)
1|0, { ...{} as T} = b;
 |       ^
[SyntaxError]: Invalid parenthesized assignment pattern. (4,10)
4|0, { ...({} as T)} = b;
 |        ^
[SyntaxError]: `...` must be followed by an assignable reference in assignment contexts (4,10)
4|0, { ...({} as T)} = b;
 |        ^
[SyntaxError]: Invalid parenthesized assignment pattern. (5,6)
5|[...([] as T)] = b;
 |    ^
